<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/currencyInput2"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toEndOf="@+id/RadioGroup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="148dp"
        android:layout_height="88dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331">

        <RadioButton
            android:id="@+id/intoPLN"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/intoPLN" />

        <RadioButton
            android:id="@+id/fromPLN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromPLN" />
    </RadioGroup>

    <TextView
        android:id="@+id/RESULT"
        android:layout_width="249dp"
        android:layout_height="86dp"
        android:gravity="center"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/currencyInput"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginTop="64dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        android:autofillHints="" />

    <Button
        android:id="@+id/makeExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:layout_marginBottom="10dp"
        android:text="@string/exchange"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/RESULT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

</androidx.constraintlayout.widget.ConstraintLayout>